--- a/About-me.html
+++ b/About-me.html
@@ -99,8 +99,8 @@
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-palette-4-base u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-3">
-                  <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1109" data-image-height="1600"></div>
+                <div class="u-container-layout u-container-layout-3">
+                  <div class="u-image u-image-circle u-image-1" alt="" data-image-width="1109" data-image-height="1600"></div>
                   <h5 class="u-text u-text-3">BeRTHOLD JESÚS PACUALA VILLAVICENCIO</h5>
                 </div>
               </div>
